GNOME Bugzilla – Bug 665700
Incorrect --browser manpages documentation
Last modified: 2011-12-07 16:39:42 UTC
Using GNO%E 3.2: "man nautilus" still list the --browser option which is not working (nautilus displays an incorrect argument error) https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/890071 also indicates that some users still have custom .desktop calling nautilus with that option, which leads to bugs on upgrades. Would you consider adding back a nop --browser to nautilus (rather than exiting with an error) to accommodate those?
I removed the option description from the man page in git master. I agree with you it's bad to break every external script/desktop file that hardcodes --browser in the command line, so I followed your suggestion and added back a dummy and hidden --browser cmdline option that does nothing (but avoids aborting when nautilus is called with such option).