application: add a compatibility dummy --browser cmdline option

External scripts or desktop files from previous might still call
nautilus with the --browser option, and it's bad to just fail in that
case. Add a dummy (and hidden) cmdline option that does nothing for
--browser.

https://bugzilla.gnome.org/show_bug.cgi?id=665700